bdr.BDR.scala.error
Erreur de compilation :
BDR:11: error: too many arguments for method droite: ()Unit
      droite(2)
            ^